# qvc-clean

./: .gitignore  README.md  pyproject.toml
assets/example/: convert.txt
configs/: qvc_hubert.json  qvc_whisper_large_v2.json
datasets/jvs/: jvs_preprocessed_train.txt  jvs_preprocessed_val.txt
scripts/infer/: convert.py
scripts/preprocess/: preprocess_wav.py  preprocess_weo.py
scripts/train/: train.py
src/qvc/: attentions.py  commons.py  data_loader.py  losses.py  mel_processing.py  models.py  modules.py  pqmf.py  stft.py  utils.py
src/whisper/: audio.py  audio_original.py  audiolargev3kotoba.py  functionals.py
