[project]
name = "qvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "librosa==0.11.0",
    "matplotlib==3.7.0",
    "tensorboard==2.20.0",
    "torch==2.9",
    "torchaudio==2.9.0",
    "torchcodec==0.8.1",
    "torchvision==0.24.0",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "numpy<2.0.0",
]
